# iTgLegacy

./: .gitignore  .gitmodules  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  compile_commands.json  configure.ac  configure_example  howto_push_sert  jtool2.tgz  out.pem
libtg/tg/: 2fa.c  Makefile  Makefile.am  Makefile.in  ack.c  answer.c  answer.h  auth.c  auth_key.c  channel.c  channel.h  chat.c  chat.h  connect.c  database.c  database.h  dc.h  dialogs.c  dialogs.h  encrypt.c  errors.c  errors.h  files.c  files.h  header.c  http.c  http.h  images.c  images.h  messages.c  messages.h  net.c  net.h  ntp.c  peer.c  peer.h  prepare_query.c  queue.c  queue.h  run_api.c  (+10 more)
libtg/tg/.deps/: libtg_la-2fa.Plo  libtg_la-ack.Plo  libtg_la-aes.Plo  libtg_la-answer.Plo  libtg_la-auth.Plo  libtg_la-channel.Plo  libtg_la-chat.Plo  libtg_la-clock_gettime.Plo  libtg_la-cmn.Plo  libtg_la-connect.Plo  libtg_la-database.Plo  libtg_la-dialogs.Plo  libtg_la-ds.Plo  libtg_la-encrypt.Plo  libtg_la-files.Plo  libtg_la-header.Plo  libtg_la-hsh.Plo  libtg_la-http.Plo  libtg_la-images.Plo  libtg_la-messages.Plo  libtg_la-net.Plo  libtg_la-ntp.Plo  libtg_la-pbkdf2.Plo  libtg_la-peer.Plo  libtg_la-prepare_query.Plo  libtg_la-queue.Plo  libtg_la-rsa.Plo  libtg_la-send_query.Plo  libtg_la-strerr.Plo  libtg_la-tg.Plo  libtg_la-transport.Plo  libtg_la-updates.Plo  libtg_la-user.Plo
libtg2objc/: CoreDataTools.h  CoreDataTools.m  Makefile.am  NSData+libtg2.h  NSData+libtg2.m  NSString+libtg2.h  NSString+libtg2.m  TGChatPhoto.h  TGChatPhoto.m  TGDialog.h  TGDialog.m  TGDialogFolder.h  TGDialogFolder.m  TGFolder.h  TGFolder.m  TGManagedObjectContext.h  TGManagedObjectContext.m  TGManagedObjectModel.h  TGManagedObjectModel.m  TGMessage.h  TGMessage.m  TGMessageEmpty.h  TGMessageEmpty.m  TGMessageService.h  TGMessageService.m  TGObject.h  TGObject.m  TGPeer.h  TGPeer.m  TGPersistentStoreCoordinator.h  TGPersistentStoreCoordinator.m  macro_attributes.h  macro_from_managed_object.h  macro_from_tl.h  macro_properties.h  macro_to_managed_object.h
src/: ActionSheet.h  ActionSheet.m  AppDelegate.h  AppDelegate.m  Auth.h  AuthViewController.h  AuthViewController.m  CaChatViewController.h  ChatBox.h  ChatBox.m  ChatViewCell.h  ChatViewCell.m  ChatViewController.h  ChatViewController.m  ChatViewControllerOld.h  ChatViewControllerOld.m  ChatsViewController.h  ChatsViewController.m  ConfigViewController.h  ConfigViewController.m  ContactsListViewController.h  ContactsListViewController.m  DialogViewCell.h  DialogViewCell.m  DialogsViewController.h  DialogsViewController.m  DownloadManager.h  DownloadManager.m  FilePickerController.h  FilePickerController.m  Info.plist  InputToolBar.h  InputToolBar.m  LaunchScreen.nib  Makefile.am  QuickLookController.h  QuickLookController.m  RootViewController.h  RootViewController.m  TGActionTableView.m  (+13 more)
src/APLSlideMenu/: APLSlideMenuViewController.h
src/BubbleView/: NSBubbleData.h  NSBubbleData.m  UIBubbleTableView.h  UIBubbleTableView.m  UIBubbleTableViewCell.m  UIBubbleTableViewDelegate.h
src/RequestFactory/: CaRequestFactory.h
src/SVProgressHUD/: SVProgressHUD.m
src/TSMessages/: TSMessage.m
src/UIImage+Utils/: UIImage+Utils.h  UIImage+Utils.m
src/UIInputToolbar/: BHExpandingTextView.m  BHInputToolbar.h  BHInputToolbar.m
src/libtgvoip/: .configure.ac.un~  Buffers.h  Makefile  Makefile.in  OpusDecoder.h  OpusEncoder.h  aclocal.m4  config.h  config.h.in  config.status  configure.ac  configure~  libtool  threading.h
src/libtgvoip/.deps/: Buffers.Plo  CongestionControl.Plo  EchoCanceller.Plo  JitterBuffer.Plo  MediaStreamItf.Plo  MessageThread.Plo  NetworkSocket.Plo  OpusDecoder.Plo  OpusEncoder.Plo  PacketReassembler.Plo  VoIPController.Plo  VoIPGroupController.Plo  VoIPServerConfig.Plo  json11.Plo  logging.Plo
src/libtgvoip/audio/.deps/: AudioIO.Plo  AudioInput.Plo  AudioOutput.Plo  Resampler.Plo
src/libtgvoip/os/darwin/: AudioOutputAudioUnit.h  AudioUnitIO.h
src/libtgvoip/os/linux/.deps/: AudioInputALSA.Plo  AudioInputPulse.Plo  AudioOutputALSA.Plo  AudioOutputPulse.Plo  AudioPulse.Plo
src/libtgvoip/os/posix/.deps/: NetworkSocketPosix.Plo
src/libtgvoip/video/.deps/: ScreamCongestionController.Plo  VideoRenderer.Plo  VideoSource.Plo
src/libtgvoip/webrtc_dsp/absl/strings/.deps/: ascii.Plo  string_view.Plo
src/libtgvoip/webrtc_dsp/absl/types/.deps/: bad_optional_access.Plo  optional.Plo
src/libtgvoip/webrtc_dsp/api/audio/.deps/: audio_frame.Plo  echo_canceller3_config.Plo  echo_canceller3_factory.Plo
src/libtgvoip/webrtc_dsp/common_audio/.deps/: audio_converter.Plo  audio_util.Plo  channel_buffer.Plo  fir_filter_c.Plo  fir_filter_factory.Plo  fir_filter_sse.Plo  real_fourier.Plo  real_fourier_ooura.Plo  ring_buffer.Plo  smoothing_filter.Plo  sparse_fir_filter.Plo  wav_file.Plo  wav_header.Plo  window_generator.Plo
src/libtgvoip/webrtc_dsp/common_audio/resampler/.deps/: push_resampler.Plo  push_sinc_resampler.Plo  resampler.Plo  sinc_resampler.Plo  sinc_resampler_sse.Plo  sinusoidal_linear_chirp_source.Plo
src/libtgvoip/webrtc_dsp/common_audio/signal_processing/.deps/: auto_corr_to_refl_coef.Plo  auto_correlation.Plo  complex_bit_reverse.Plo  complex_fft.Plo  copy_set_operations.Plo  cross_correlation.Plo  division_operations.Plo  dot_product_with_scale.Plo  downsample_fast.Plo  energy.Plo  filter_ar.Plo  filter_ar_fast_q12.Plo  filter_ma_fast_q12.Plo  get_hanning_window.Plo  get_scaling_square.Plo  ilbc_specific_functions.Plo  levinson_durbin.Plo  lpc_to_refl_coef.Plo  min_max_operations.Plo  randomization_functions.Plo  real_fft.Plo  refl_coef_to_lpc.Plo  resample.Plo  resample_48khz.Plo  resample_by_2.Plo  resample_by_2_internal.Plo  resample_fractional.Plo  spl_init.Plo  spl_inl.Plo  spl_sqrt.Plo  splitting_filter1.Plo  (+2 more)
src/libtgvoip/webrtc_dsp/rtc_base/.deps/: checks.Plo  criticalsection.Plo  event.Plo  event_tracer.Plo  logging_webrtc.Plo  platform_file.Plo  platform_thread.Plo  platform_thread_types.Plo  race_checker.Plo  string_to_number.Plo  stringencode.Plo  stringutils.Plo  thread_checker_impl.Plo  timeutils.Plo
src/opusenc/: opusenc.h
(+289 files in other folders)
